--- a/SXS841-EMA01 Venus Altimetry Modelling - Process Data.ipynb
+++ b/SXS841-EMA01 Venus Altimetry Modelling - Process Data.ipynb
@@ -26,7 +26,9 @@
     "\n",
     "Testing:\n",
     "\n",
-    "urn:nasa:pds:magellan_arcdr:data_altimetry:adf05715_1::1.0\n"
+    "urn:nasa:pds:magellan_arcdr:data_altimetry:adf05715_1::1.0\n",
+    "\n",
+    "The objective of this code is to extract the Latitude, Longitude and Altitude (mean radial distance) from the data collection which is spread acorss multiple directories and files and combine into a single file for processing in another script into imagery, and for calculating the plantary radial mean distance.\n"
    ]
   },
   {
@@ -4437,9 +4439,8 @@
     }
    ],
    "source": [
-    "import datashader as ds, pandas as pd, colorcet\n",
-    "import calendar\n",
     "from urllib.request import urlretrieve\n",
+    "import calendar\n",
     "import datetime\n",
     "import sys\n",
     "import warnings\n",
@@ -4448,16 +4449,6 @@
     "from numpy import  *\n",
     "import xml.etree.ElementTree as ET\n",
     "import struct\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from datashader.colors import viridis\n",
-    "from functools import partial\n",
-    "from datashader.utils import export_image\n",
-    "from datashader.colors import colormap_select, Greys9\n",
-    "import datashader as ds, datashader.transfer_functions as tf, numpy as np\n",
-    "import dask.dataframe as dd\n",
-    "import xarray as xr\n",
-    "from xrspatial import generate_terrain\n",
     "%matplotlib inline\n",
     "\n",
     "#URL for Magellan data\n",
@@ -4506,6 +4497,7 @@
     "#Parse the data frame string entry\n",
     "dfCollection['DATASTRING'] = dfCollection['DATASTRING'].apply(parse_collection)\n",
     "dfCollection['FILENAME'] = dfCollection['DATASTRING']\n",
+    "\n",
     "#Add the directory to filename\n",
     "dfCollection['DATASTRING'] = dfCollection['DATASTRING'].apply(add_directory) \n",
     "                            \n",
@@ -4519,18 +4511,12 @@
     "\n",
     "for index, row in dfCollection.iterrows():\n",
     "    \n",
-    "    #if tempcount == 500:\n",
-    "    #    break\n",
-    "    #tempcount = tempcount + 1\n",
-    "    \n",
     "    #Set the source and target filenames\n",
     "    xmlfilename = tempfilesdirectory + row['FILENAME'] + \".xml\"\n",
     "    urlxmlfilename = row['DATASTRING'] + '.xml'\n",
-    "    #print(urlxmlfilename)\n",
     "\n",
     "    #Get the file from the server\n",
     "    urlretrieve(urlxmlfilename, xmlfilename)\n",
-    "    #print ('Copied: ' + urlxmlfilename + ' to ' + xmlfilename)\n",
     "\n",
     "    # Parse the XML file\n",
     "    tree = ET.parse(xmlfilename)\n",
@@ -4548,42 +4534,28 @@
     "\n",
     "    for general_data in root.iter('{http://pds.nasa.gov/pds4/pds/v1}Table_Binary'):\n",
     "        name = general_data.find('{http://pds.nasa.gov/pds4/pds/v1}name').text\n",
-    "        #offset = general_data.find('{http://pds.nasa.gov/pds4/pds/v1}offset').text\n",
     "        records = int(general_data.find('{http://pds.nasa.gov/pds4/pds/v1}records').text)\n",
-    "\n",
-    "    #print ('Tree      : ' + str(tree))\n",
-    "    #print ('Root      : ' + str(root))\n",
-    "    #print ('Namespace : ' + str(namespaces))\n",
-    "    #print ('Name      : ' + name)\n",
-    "    #print ('D Filename: ' + data_filename)\n",
-    "    #print ('Offset    : ' + offset)\n",
-    "    #print ('Records   : ' + str(records))\n",
-    "    #print ('Rec. Len. : ' + str(record_length))\n",
     "\n",
     "    for field_binary in root.iter('{http://pds.nasa.gov/pds4/pds/v1}Field_Binary'):\n",
     "        name = field_binary.find('{http://pds.nasa.gov/pds4/pds/v1}name').text\n",
     "        field_location = field_binary.find('{http://pds.nasa.gov/pds4/pds/v1}field_location').text\n",
-    "        #data_type = field_binary.find('{http://pds.nasa.gov/pds4/pds/v1}data_type').text\n",
-    "        #field_length = field_binary.find('{http://pds.nasa.gov/pds4/pds/v1}field_length').text\n",
     "        if str(name) == 'Footprint_Longitude':\n",
     "            Longitude_Offset = int(field_location)\n",
-    "            #print ('Long Off. : ' + str(Longitude_Offset))\n",
     "        if str(name) == 'Footprint_Latitude':\n",
     "            Latitude_Offset = int(field_location)\n",
-    "            #print ('Lat Off.  : ' + str(Latitude_Offset))\n",
     "        if str(name) == 'Derived_Planetary_Radius':\n",
     "            Derived_Planetary_Radius_Offset = int(field_location)        \n",
-    "            #print ('Rad. Off. : ' + str(Derived_Planetary_Radius_Offset))        \n",
     "\n",
     "    #Get the data file from the server\n",
     "    localdatafilename = tempfilesdirectory + data_filename\n",
     "    urldatafilename = row['DATASTRING'] + '.dat'\n",
-    "    #Check the calculcated data file matches the XML data file\n",
+    "\n",
+    "    #Check the calculated data file matches the XML data file\n",
     "    if row['FILENAME'] + \".dat\" != data_filename:\n",
     "        print ('Error - mis-matched names ' + row['FILENAME'] + \".dat\" + \" == \" + data_filename)\n",
     "    urlretrieve(urldatafilename, localdatafilename)\n",
-    "    #print ('Copied    : ' + urldatafilename + ' to ' + localdatafilename)\n",
-    "\n",
+    "    \n",
+    "    #Process each record in the file\n",
     "    with open(localdatafilename, 'rb') as file:\n",
     "        count = 0\n",
     "        while (count < records):\n",
@@ -4601,71 +4573,18 @@
     "            VAlt.append(dpradius_float_value)\n",
     "            if count == 0:\n",
     "                print('Processing: ' + data_filename)\n",
-    "                #print('Processing: ' + data_filename + '; Record    : ' +  str(longitude_float_value) + ',' + str(latitude_float_value) + '->' + str(dpradius_float_value))\n",
     "            count = count + 1\n",
     "\n",
-    "\n",
-    "#convert to data frame\n",
+    "#convert the data to a data frame\n",
     "dfAltData = DataFrame()\n",
     "dfAltData['Long']= VLong\n",
     "dfAltData['Lat'] = VLat\n",
     "dfAltData['Alt'] = VAlt\n",
+    "\n",
+    "#Save the processed altimetry data\n",
     "AltimetryDataFilename = tempfilesdirectory + \"magellan_altimetry.csv\"\n",
-    "dfAltData.to_csv('AltimetryDataFilename.csv', index=False)\n",
-    "plt.scatter(x=dfAltData['Long'], y=dfAltData['Lat'])\n",
-    "plt.show()\n",
-    "\n",
-    "background = \"black\"\n",
-    "cvs = ds.Canvas(plot_width=850, plot_height=500)\n",
-    "agg = cvs.points(dfAltData, 'Long', 'Lat')\n",
-    "img = ds.tf.shade(agg, cmap=colorcet.fire, how='log')\n",
-    "export = partial(export_image, background = background, export_path=\"C:/Users/stuar/OneDrive/Open University/SXS841/Venus Altimetry Modelling/Data/\")\n",
-    "cm = partial(colormap_select, reverse=(background!=\"black\"))\n",
-    "export(tf.shade(agg, cmap=cm(viridis), how='eq_hist'),\"venus_altimetry\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "lat = np.linspace(dfAltData['Lat'].min(), dfAltData['Lat'].max())\n",
-    "lon = np.linspace(dfAltData['Long'].min(), dfAltData['Long'].max())\n",
-    "lat_grid, lon_grid = np.meshgrid(lat, lon)\n",
-    "#z = np.array(dfAltData['Alt'])\n",
-    "#z = z.reshape((len(lat), len(lon)))\n",
-    "\n",
-    "# Interpolate altitude data onto the grid\n",
-    "from scipy.interpolate import griddata\n",
-    "alt_grid = griddata(\n",
-    "    (dfAltData['Lat'], dfAltData['Long']), dfAltData['Alt'],\n",
-    "    (lat_grid, lon_grid), method='cubic'\n",
-    ")\n",
-    "\n",
-    "# Interpolate altitude data\n",
-    "#altitude_grid = dfAltData['Alt'].interpolate(latitude=lat_grid, longitude=lon_grid, method='linear')\n",
-    "#print(altitude_grid)\n",
-    "#terrain = generate_terrain(altitude_grid)\n",
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.contourf(lat_grid, lon_grid, alt_grid, cmap='terrain') \n",
-    "plt.colorbar(label='Altitude')\n",
-    "plt.xlabel('Longitude')\n",
-    "plt.ylabel('Latitude')\n",
-    "plt.title('Terrain Map')\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "print (\"Ended\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "dfAltData.to_csv('AltimetryDataFilename.csv', index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
